# Chestnuts-and-Chives

./: README.md
Art/: Chestnuts.aseprite  ColourPalette.aseprite  Porcini.aseprite
Art/Mockups/: ChoppingBoard.aseprite  MapScreenMockup.aseprite  Pan.aseprite  Pan2.aseprite  Pan3.aseprite
Art/UI/Button/: Left.aseprite  Middle.aseprite  Right.aseprite
Art/UI/Fonts/: FontIdea1.aseprite  FontIdea2.aseprite  FontIdea3.aseprite
Chestnuts and Chives/: CMakeLists.txt  CMakeSettings.json  Chestnuts and Chives.sln
Chestnuts and Chives/Chestnuts and Chives/: AssetLoader.cpp  AssetLoader.h  AssetLoadingState.cpp  Chestnuts and Chives.vcxproj  Chestnuts and Chives.vcxproj.filters  Client.cpp  Client.h  ExtraSoupState.cpp  ExtraSoupState.h  GameManager.cpp  GameManager.h  GameState.h  HostState.cpp  HostState.h  Location.cpp  Location.h  Main.cpp  Map.cpp  Map.h  NetworkUtilities.cpp  NetworkUtilities.h  NonHostState.cpp  NonHostState.h  Path.cpp  Path.h  Renderable.cpp  Renderable.h  Renderer.cpp  Renderer.h  ScreenHelper.h  Server.cpp  Server.h  TestUI.cpp  TestUI.h  UIElement.cpp  UIElement.h  UIState.cpp  UIState.h
Chestnuts and Chives/Chestnuts and Chives/Assets/GameData/: Ingredients.json  Ingredients.schema.json
Chestnuts and Chives/Chestnuts and Chives/Core/AssetManagement/: AssetDictionary.h  AssetLoader.cpp  AssetLoader.h  AssetLoadingState.cpp  AssetLoadingState.h
Chestnuts and Chives/Chestnuts and Chives/Core/GameStates/: ExtraSoupState.cpp  GameManager.cpp  GameManager.h  GameState.h  UIState.cpp  UIState.h
Chestnuts and Chives/Chestnuts and Chives/Core/GameStates/DefaultStates/: ExtraSoupState.cpp  ExtraSoupState.h
Chestnuts and Chives/Chestnuts and Chives/Core/Networking/: MessageSender.cpp  MessageSender.h  NetworkUtilities.cpp  NetworkUtilities.h  ServerMessageSender.cpp  ServerMessageSender.h
Chestnuts and Chives/Chestnuts and Chives/Core/Rendering/: Renderer.cpp  Renderer.h
Chestnuts and Chives/Chestnuts and Chives/Core/UI/: Button.cpp  Button.h  TestUI.cpp  Text.cpp  Text.h  UIElement.cpp  UIElement.h  UIGameplayState.cpp  UIGameplayState.h  UIState.cpp  UIState.h
Chestnuts and Chives/Chestnuts and Chives/Game/: Main.cpp
Chestnuts and Chives/Chestnuts and Chives/Game/Cooking/: Dish.cpp  Dish.h  Ingredient.cpp  Ingredient.h  IngredientHelper.cpp  IngredientHelper.h  Pan.cpp  Pan.h  Preperation.h
Chestnuts and Chives/Chestnuts and Chives/Game/GameStates/: ConnectedState.cpp  ConnectedState.h  ConnectingState.cpp  ConnectingState.h  MenuState.cpp  MenuState.h  ServerCreationState.cpp  ServerCreationState.h
Chestnuts and Chives/Chestnuts and Chives/Game/GameStates/GameplayStates/: GameplayState.cpp  GameplayState.h  MapGameplayState.cpp  MapGameplayState.h  TestGameplayState.cpp  TestGameplayState.h
Chestnuts and Chives/Chestnuts and Chives/Game/Map/: Location.cpp  Location.h  Map.cpp  Map.h  Path.cpp  Path.h
Chestnuts and Chives/Chestnuts and Chives/Game/Networking/: Client.cpp  Client.h  Server.cpp  Server.h
Chestnuts and Chives/Chestnuts and Chives/Game/Networking/ServerStates/: MapServerState.cpp  MapServerState.h  ServerState.cpp  ServerState.h  ServerStateVotable.cpp  ServerStateVotable.h  TestServerState.cpp  TestServerState.h
Chestnuts and Chives/Chestnuts and Chives/Game/Persistence/: GameSave.cpp  GameSave.h  ItemSave.cpp  ItemSave.h  PlayerSave.cpp  PlayerSave.h
Chestnuts and Chives/Chestnuts and Chives/x64/Debug/: Chestnuts and Chives.exe.recipe  Chestnuts and Chives.ilk  vc143.idb
Chestnuts and Chives/Chestnuts and Chives/x64/Debug/Chestnut.c25b34d6.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Chestnuts and Chives.lastbuildstate  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
